--- a/Assignment_1.ipynb
+++ b/Assignment_1.ipynb
@@ -81,7 +81,7 @@
     {
       "cell_type": "code",
       "source": [
-        "line = \"The diameter of {planet} is {diameter} kilometers.\"\n",
+        "line =\"The diameter of {planet} is {diameter} kilometers.\"\n",
         "print(line.format(planet = \"Earth\",diameter = 12742))"
       ],
       "metadata": {
@@ -156,7 +156,7 @@
       "source": [
         "import numpy as np\n",
         "array=np.zeros(10)\n",
-        "print(\"An array of 10 zeros:\")\n",
+        "print(\"An array of 10 zeros\")\n",
         "print(array)"
       ],
       "metadata": {
@@ -169,8 +169,8 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "array=np.ones(10)*5\n",
-        "print(\"An array of 10 fives:\")\n",
+        "arra=np.ones(10)*s\n",
+        "print(\"An array of 10 fives\")\n",
         "print(array)"
       ],
       "metadata": {
@@ -192,7 +192,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "array=np.arange(20,36,2)\n",
+        "array=np.arrange(20,30,2)\n",
         "print(\"Array of all the even integers from 20 to 35\")\n",
         "print(array)"
       ],
@@ -215,7 +215,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "x =  np.arange(0, 9).reshape(3,3)\n",
+        "x = np.arrange(0, 9).reshape(3,3)\n",
         "print(x)\n"
       ],
       "metadata": {
@@ -239,7 +239,7 @@
       "source": [
         "a = np.array([1, 2, 3])\n",
         "b = np.array([4, 5, 6])\n",
-        "np.concatenate((a, b), axis=None)"
+        "np.concatenate((a,b),axis=None)"
       ],
       "metadata": {
         "id": "rAPSw97aYfE0"
@@ -279,7 +279,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df = pd.DataFrame((index=np.arange(3), columns=np.arange(2)))\n",
+        "df = pd.Dat at range((index=np.arrange(3),columns=np.arrange(2)))\n",
         "print(df)"
       ],
       "metadata": {
@@ -301,9 +301,10 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "days = pd.date_range(start ='1-1-2023', end ='1-02-2023')\n",
+        "days = pd.date_range(start = '1.1.2023', end = '1.2.2023')\n",
         "for val in days:\n",
-        "    print(val)"
+        "  print(val)\n",
+        "  "
       ],
       "metadata": {
         "id": "dgyC0JhVYl4F"
@@ -336,9 +337,9 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd   \n",
-        "lists = [[1, 'aaa', 22], [2, 'bbb', 25], [3, 'ccc', 24]]    \n",
-        "df = pd.DataFrame(lists, columns =['Tag', 'number']) \n",
+        "import pandas as pd\n",
+        "lists = [[3, 'aaa', 22],[2, 'bbb', 25],[3, 'ccc', 24]]\n",
+        "df = pd.Dat at range(lists, coloumns =['tag', 'number'])\n",
         "print(df)"
       ],
       "metadata": {
